[Emacs] Camel-case support when navigating through a word

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -54,6 +54,10 @@
    (global-set-key (kbd "C-c r") 'config-reload)
 #+END_SRC
 
+** subword
+#+BEGIN_SRC emacs-lisp
+  (global-subword-mode 1)
+#+END_SRC
 * Packages
 ** which-key
 #+BEGIN_SRC emacs-lisp
