--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -158,3 +158,12 @@
     (other-window 1))
   (global-set-key (kbd "C-x 3") 'split-and-follow-vertically)
 #+END_SRC
+** kill whole word
+#+BEGIN_SRC emacs-lisp
+  (defun kill-whole-word ()
+    (interactive)
+    (backward-word)
+    (kill-word 1))
+  (global-set-key (kbd "C-x w w") 'kill-whole-word)
+#+END_SRC
+
