--- a/Emacs/.emacs.d/configuration.org
+++ b/Emacs/.emacs.d/configuration.org
@@ -31,6 +31,10 @@
   (line-number-mode 1)
   (column-number-mode 1)
 #+END_SRC
+** show line numbers
+#+BEGIN_SRC emacs-lisp
+  (global-display-line-numbers-mode)
+#+END_SRC
 * System
 ** starting emacs server
 #+BEGIN_SRC emacs-lisp
