--- a/Emacs/.emacs.d/configuration.org
+++ b/Emacs/.emacs.d/configuration.org
@@ -205,6 +205,11 @@
   (use-package yaml-mode
     :ensure t)
 #+END_SRC
+** handlebars-mode
+#+BEGIN_SRC emacs-lisp
+  (use-package handlebars-mode
+    :ensure t)
+#+END_SRC
 * Overrides
 ** window splitting
 #+BEGIN_SRC emacs-lisp
