--- a/Emacs/.emacs.d/configuration.org
+++ b/Emacs/.emacs.d/configuration.org
@@ -115,6 +115,10 @@
 #+BEGIN_SRC emacs-lisp
   (setq-default indent-tabs-mode nil)
 #+END_SRC
+** remove trailing spaces upon save
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'before-save-hook 'delete-trailing-whitespace)
+#+END_SRC
 * Packages
 ** which-key
 #+BEGIN_SRC emacs-lisp
