--- a/Emacs/.emacs.d/configuration.org
+++ b/Emacs/.emacs.d/configuration.org
@@ -158,6 +158,13 @@
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-x b") 'ido-switch-buffer)
 #+END_SRC
+*** vertical layout
+#+BEGIN_SRC emacs-lisp
+  (use-package ido-vertical-mode
+    :ensure t
+    :init
+    (ido-vertical-mode 1))
+#+END_SRC
 ** ibuffer
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-x C-b") 'ibuffer)
