--- a/Emacs/.emacs.d/configuration.org
+++ b/Emacs/.emacs.d/configuration.org
@@ -231,6 +231,12 @@
     (define-key global-map [remap dabbrev-expand] 'helm-dabbrev)
     (define-key global-map [remap execute-extended-command] 'helm-M-x))
 #+END_SRC
+** neo-tree
+#+BEGIN_SRC emacs-lisp
+  (use-package neotree
+    :ensure t
+    :bind ([f8] . 'neotree-toggle))
+#+END_SRC
 ** projectile
 #+BEGIN_SRC emacs-lisp
   (use-package projectile
@@ -238,8 +244,9 @@
     :bind-keymap
     ("C-c p" . projectile-command-map)
     :config
+    (require 'neotree)
     (projectile-mode 1)
-    (setq projectile-switch-project-action #'projectile-dired)
+    (setq projectile-switch-project-action 'neotree-projectile-action)
     (setq projectile-completion-system 'helm))
 #+END_SRC
 ** helm-projectile
